Minor comment Fixes. Fixing spacing in HTML page.

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -2,7 +2,7 @@
 	margin-top:20px;
 }
 
-#inputFields {
+#inputFields, #cancelButton {
 	display:none;
 }
 
